mostly done with code, need to do write up

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
           <div class="autocomplete_container">
             <div class="autocomplete__hits" id="autocomplete-hits">
             </div>
+            <div class="autocomplete__hits" id="autocomplete-suggestion">
+            </div>
           </div>
         </div>
       </div>
